--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"  
+      href="./index.css"
+    />
     <title>ESD</title>
     <link rel="icon" type="image/x-icon" href="\favicon.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
 </head>
@@ -10,7 +23,7 @@
 
 
 
-
+ESD!
 
 
 
