--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="./index.css"
     />
     <title>ESD</title>
-    <link rel="icon" type="image/x-icon" href="\favicon.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
+    <link rel="icon" type="image/x-icon" href="\esdfavicon.png"> <!-- for when we add the favicon (the .svg version of the club logo) -->
 </head>
 <body style="overflow:hidden"> <!-- sorry if I forget to use css instead of styles -->
 
