--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"  
       href="./index.css"
     />
-    <title>ESD</title>
+    <title>Engineering for Sustainable Development</title>
     <link rel="icon" type="image/x-icon" href="\esdfavicon.png"> <!-- for when we add the favicon (the .svg version of the club logo) -->
 </head>
 <body style="overflow:hidden"> <!-- sorry if I forget to use css instead of styles -->
