--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="./index.css"
     />
     <title>Engineering for Sustainable Development</title>
-    <link rel="icon" type="image/x-icon" href="\esdfavicon.png"> <!-- for when we add the favicon (the .svg version of the club logo) -->
+    <link rel="icon" type="image/png" href="/esdfavicon.png"> <!-- for when we add the favicon (the .svg version of the club logo) -->
 </head>
 <body style="overflow:hidden"> <!-- sorry if I forget to use css instead of styles -->
 
@@ -23,7 +23,8 @@
 
 
 
-<h1 class="title"> ESD! </h1>
+<h1 class="title"> ESD!</h1>
+    <p> Engineering for Sustainable Development!!</p>
 
 
 
