--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="nav-bar"> <!-- the navigation bar at the top of the page -->
   <a class="nav-logo"> 
-      <img src="Classic_Logo_Transparent.png" alt="ESD!">
+      <img src="esdfavicon.png" alt="ESD!">
   </a>
   <a class="nav-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform">Sign Up for 2024!!!</a>
 </div>
