--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       href="./index.css"
     />
     <title>Engineering for Sustainable Development</title>
-    <link rel="icon" type="image/png" sizes="64x64" href="/esdfavicon.png"> <!-- for when we add the favicon (the .svg version of the club logo) -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/svg" sizes="16x16" href="/esdfavicon.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
+    <link rel="icon" type="image/svg" sizes="32x32" href="/esdfavicon.svg">
+    <link rel="icon" type="image/svg" sizes="48x48" href="/esdfavicon.svg">
 </head>
 <body style="overflow:hidden"> <!-- sorry if I forget to use css instead of styles -->
 
