--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       href="./index.css"
     />
     <title>Engineering for Sustainable Development</title>
-    <link rel="icon" type="image/svg" sizes="16x16" href="/esdfavicon.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
-    <link rel="icon" type="image/svg" sizes="32x32" href="/esdfavicon.svg">
-    <link rel="icon" type="image/svg" sizes="48x48" href="/esdfavicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/esdfavicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="48x48" href="/esdfavicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/esdfavicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/esdfavicon.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
 </head>
 <body style="overflow:hidden"> <!-- sorry if I forget to use css instead of styles -->
 
@@ -31,7 +32,7 @@
 
 
 <h1 class="title"> ESD!</h1>
-    <p> Engineering for Sustainable Development!!</p>
+    <p> Engineering for Sustainable Development!!!!!</p>
 
 
 
