--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       href="./index.css"
     />
     <title>Engineering for Sustainable Development</title>
-    <link rel="icon" type="image/svg+xml" href="/esdfavicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="48x48" href="/esdfavicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/esdfavicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/esdfavicon.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
+    <link rel="icon" type="image/svg+xml" href="/Logo.svg">
+    <link rel="icon" type="image/svg+xml" sizes="48x48" href="/Logo.svg">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/Logo.svg">
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/Logo.svg"> <!-- for when we add the favicon (the .svg version of the club logo) -->
 </head>
 <body style="overflow:hidden"> <!-- sorry if I forget to use css instead of styles -->
 
