--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 
 
 <h1 class="title"> ESD!</h1>
-    <p> Engineering for Sustainable Development!!!!!</p>
+    <p>ESD is a student-led club that connects, educates, and empowers students through sustainable engineering practices.</p>
 
-
-
-
+<a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform">
+    <div>
+       <h1>Sign Up</h1> 
+    </div>
+</a>
   
 
 <!-- markup -->
