--- a/index.html
+++ b/index.html
@@ -36,20 +36,25 @@
 
 <a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform">
     <div>
-       <h1>Sign Up</h1> 
+       <h1>Sign Up! (It's free)</h1> 
     </div>
 </a>
-  
+
+<div class="footer">
+    <h2>Socials:</h2>
+    <a href="https://www.instagram.com/esd.uoa/"><h3>Instagram: https://www.instagram.com/esd.uoa/</h3></a>
+    <a href="https://auckland.campuslabs.com/engage/organization/esd"><h3>Engage: https://auckland.campuslabs.com/engage/organization/esd</h3></a>
+</div>
 
 <!-- markup -->
 <script type="application/ld+json"> 
 {
   "@context": "http://schema.org",
   "@type": "SoftwareApplication",
-  "name": "Xenolith quest",
+  "name": "Engineering for sustainable development",
   "review": {
     "@type": "Review",
-    "reviewBody": "A game about winning the unwiniable, defeating the undefeatable and conquoring the unconquorable! Xenolith quest is a game where the underdog still stands a change against the oppresive regime of the enemy! Take your stance and lead your team to victory in xenolith quest!!!"
+    "reviewBody": "We envision a future in which engineering plays a major role in sustainable development, where engineers comprehend the social, environmental, cultural, and economic contexts within which they operate. It is a future where sustainability and people are at the heart of decision-making."
   }
 }
 </script>
