--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <div class="footer">
     <h2>Socials:</h2>
-    <a href="https://www.instagram.com/esd.uoa/"><h3>Instagram: https://www.instagram.com/esd.uoa/</h3></a>
-    <a href="https://auckland.campuslabs.com/engage/organization/esd"><h3>Engage: https://auckland.campuslabs.com/engage/organization/esd</h3></a>
+    <a href="https://www.instagram.com/esd.uoa/"><h3>Follow us on Instagram! : esd.uoa</h3></a>
+    <a href="https://auckland.campuslabs.com/engage/organization/esd"><h3>Find us on Engage: https://auckland.campuslabs.com/engage/organization/esd</h3></a>
 </div>
 
 <!-- markup -->
