--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 
 
 
-<h1 class="title"> ESD!</h1>
+<h1 class="title"> Engineering for Sustainable Development</h1>
     <p>ESD is a student-led club that connects, educates, and empowers students through sustainable engineering practices.</p>
+    <p>We are a community of likeminded individuals where we envision a future in which engineering plays a major role in sustainable development, where engineers comprehend the social, environmental, cultural, and economic contexts within which they operate. It is a future where sustainability and people are at the heart of decision-making.</p>
 
 <a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform">
     <div>
-       <h1>Sign Up! (It's free)</h1> 
+       <h1>Join Us! (It's free)</h1> 
     </div>
 </a>
 
