--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>ESD is a student-led club that connects, educates, and empowers students through sustainable engineering practices.</p>
     <p>We are a community of likeminded individuals where we envision a future in which engineering plays a major role in sustainable development, where engineers comprehend the social, environmental, cultural, and economic contexts within which they operate. It is a future where sustainability and people are at the heart of decision-making.</p>
 
-<a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform">
+<a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform" style="background-color:#8DBFE8;color: #00467F">
     <div>
        <h1>Join Us! (It's free)</h1> 
     </div>
