--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform" style="background-color:#8DBFE8;color: #00467F">
     <div>
-       <h1>Join Us! (It's free)</h1> 
+       <h1 class="sign-up">Join Us! (It's free)</h1> 
     </div>
 </a>
 
