--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
     </div>
 </a>
 
+<div>
+    <h1>Upcoming Event:</h1>
+    <a>
+        <h1></h1>
+    </a>
+</div>
 <div class="footer">
     <h2>Socials:</h2>
     <a href="https://www.instagram.com/esd.uoa/"><h3>Follow us on Instagram! : esd.uoa</h3></a>
     <a href="https://auckland.campuslabs.com/engage/organization/esd"><h3>Find us on Engage: https://auckland.campuslabs.com/engage/organization/esd</h3></a>
+    <a href"mailto:esd.uoa@gmail.com"><h3>Email Us at: esd.uoa@gmail.com</h3></a>
 </div>
 
 <!-- markup -->
