--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
     <h1 class="sign-up">Join Us! (It's free)</h1> 
 </a>
 
-<div>
-    <h1>Upcoming Event:</h1>
-    <a>
-        <h1></h1>
-    </a>
-</div>
+<a>
+    <h1>Learn more and Sign Up to the Eco-Bricks project here!</h1>
+</a>
+    
 <div class="footer">
     <h2>Socials:</h2>
     <a href="https://www.instagram.com/esd.uoa/"><h3>Follow us on Instagram! : esd.uoa</h3></a>
