--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1 class="sign-up">Join Us! (It's free)</h1> 
 </a>
 
-<a>
+<a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSchtkM8wZNjwN01Po9PyrrWH9MB3L3CID0ACDZw0CIjUSODaw/viewform">
     <h1>Learn more and Sign Up to the Eco-Bricks project here!</h1>
 </a>
     
