--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </a>
 
 <a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSchtkM8wZNjwN01Po9PyrrWH9MB3L3CID0ACDZw0CIjUSODaw/viewform">
-    <h1>Learn more and Sign Up to the Eco-Bricks project here!</h1>
+    <h1 class="sign-up">Learn more and Sign Up to the Eco-Bricks project here!</h1>
 </a>
     
 <div class="footer">
