--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <h1 class="sign-up">Join Us! (It's free)</h1> 
 </a>
 
-<a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSchtkM8wZNjwN01Po9PyrrWH9MB3L3CID0ACDZw0CIjUSODaw/viewform">
-    <h1 class="sign-up">Learn more and Sign Up to the Eco-Bricks project here!</h1>
+<a class="eco" href="https://docs.google.com/forms/d/e/1FAIpQLSchtkM8wZNjwN01Po9PyrrWH9MB3L3CID0ACDZw0CIjUSODaw/viewform">
+    <h1 class="eco">Learn more and Sign Up to the Eco-Bricks project here!</h1>
 </a>
     
 <div class="footer">
