--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <p class="statement">ESD is a student-led club that connects, educates, and empowers students through sustainable engineering practices.</p>
     <p class="statement">We are a community of likeminded individuals where we envision a future in which engineering plays a major role in sustainable development, where engineers comprehend the social, environmental, cultural, and economic contexts within which they operate. It is a future where sustainability and people are at the heart of decision-making.</p>
 
-<a class="sign-up" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform" style="background-color:#8DBFE8;color: #00467F">
-    <h1 class="sign-up">Join Us! (It's free)</h1> 
+<a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSc6_rkXXWdFnGvz-dJkxbvOeuXOUPtJtX-SIb8fd853yMPYjg/viewform" style="background-color:#8DBFE8;color: #00467F">
+    <h1 class="button">Join Us! (It's free)</h1> 
 </a>
 
-<a class="eco" href="https://docs.google.com/forms/d/e/1FAIpQLSchtkM8wZNjwN01Po9PyrrWH9MB3L3CID0ACDZw0CIjUSODaw/viewform">
-    <h1 class="eco">Learn more and Sign Up to the Eco-Bricks project here!</h1>
+<a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSchtkM8wZNjwN01Po9PyrrWH9MB3L3CID0ACDZw0CIjUSODaw/viewform">
+    <h1 class="button">Learn more and Sign Up to the Eco-Bricks project here!</h1>
 </a>
     
 <div class="footer">
