--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>Socials:</h2>
     <a href="https://www.instagram.com/esd.uoa/"><h3>Follow us on Instagram! : esd.uoa</h3></a>
     <a href="https://auckland.campuslabs.com/engage/organization/esd"><h3>Find us on Engage: https://auckland.campuslabs.com/engage/organization/esd</h3></a>
-    <a href"mailto:esd.uoa@gmail.com"><h3>Email Us at: esd.uoa@gmail.com</h3></a>
+    <a href="mailto:esd.uoa@gmail.com"><h3>Email Us at: esd.uoa@gmail.com</h3></a>
 </div>
 
 <!-- markup -->
